hphp/hack/test/typecheck/typing_fail_cast.php.exp
File "typing_fail_cast.php", line 24, characters 20-20:
A left parenthesis ('(') is expected here. (Parsing[1002])
